# dora-rag

./: .gitignore  README.md  config.yaml  import_test.py  pyproject.toml  requirements.txt  test_import.py
src/: models.py
src/api/: main.py
src/chunker/: chunker.py
src/dora_rag/: __init__.py  api.py  cli.py  generation.py  ingestion.py  models.py  reranker.py  retrieval.py  search.py  utils.py  vector_retrieval.py
src/embedder/: embedder.py
src/generator/: generator.py
src/indexer/: indexer.py
src/ingest/: processor.py
src/retriever/: retriever.py
