[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dora-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "docling",
    "pymupdf",
    "flagembedding",
    "rank-bm25",
    "qdrant-client",
    "httpx",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "loguru",
    "openai",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/dora_rag"]
